cabal-version: 3.0
name:          cardano-api-latest
version:       0.1.0
synopsis:
  View patterns for cardano-api, specialised to the most recent era.

author:        IOG
copyright:     2022 IOG
license:       Apache-2.0
license-files:
  LICENSE
  NOTICE

source-repository head
  type:     git
  location: https://github.com/cardano-scaling/cardano-api-latest

common project-config
  default-language:   GHC2021
  default-extensions:
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    FunctionalDependencies
    GADTs
    LambdaCase
    MultiWayIf
    OverloadedStrings
    PartialTypeSignatures
    PatternSynonyms
    TypeFamilies
    ViewPatterns

  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wredundant-constraints -Wunused-packages
    -Wmissing-deriving-strategies -fprint-potential-instances
    -Wmissing-import-lists -Wmissing-local-signatures

library
  import:          project-config
  hs-source-dirs:  src
  ghc-options:     -haddock
  exposed-modules: Cardano.Api.Latest
  build-depends:
    , base                   >=4.14
    , bytestring
    , cardano-api            ^>=10.17
    , cardano-ledger-alonzo
    , cardano-ledger-core
    , containers
